--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -1,50 +1,37 @@
-{% extends "base/main.html" %}
+{% extends "base/chat_base.html" %}
 {% load static %}
 
 {% block content %}
-<div class="container mt-5">
-  <h2 class="mb-4">My Profile</h2>
 
-  <form method="POST" enctype="multipart/form-data" class="p-4 rounded shadow-sm bg-white">
-    {% csrf_token %}
+<div class="card-header text-black">
+            <h5 class="mb-0">Update Profile</h5>
+        </div>
+<hr>
 
-    <!-- Profile Fields -->
+{% if messages %}
+  {% for message in messages %}
+    <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+  {% endfor %}
+{% endif %}
+
+<form method="POST" enctype="multipart/form-data">
+  {% csrf_token %}
+  {{ form.non_field_errors }}
+
+  {% for field in form %}
     <div class="mb-3">
-      <label for="id_username" class="form-label">Display Name</label>
-      {{ form.username }}
-    </div>
-
-    <div class="mb-3">
-      <label for="id_email" class="form-label">Email</label>
-      {{ form.email }}
-    </div>
-
-    <div class="mb-3">
-      <label for="id_avatar" class="form-label">Profile Picture</label><br>
-      {% if user.avatar %}
-        <img src="{{ user.avatar.url }}" alt="Profile picture" class="img-thumbnail mb-2" width="120">
+      {{ field.label_tag }}
+      {{ field }}
+      {% if field.errors %}
+        <div class="text-danger small">{{ field.errors|striptags }}</div>
       {% endif %}
-      {{ form.avatar }}
     </div>
+  {% endfor %}
 
-    <div class="mb-3">
-      <label for="id_old_password" class="form-label">Current Password</label>
-      {{ form.old_password }}
-    </div>
+  <button type="submit" class="btn btn-primary">Save Changes</button>
+  <a href="{% url 'home' %}" class="btn btn-secondary px-4">Cancel</a>
+</form>
 
-    <div class="mb-3">
-      <label for="id_new_password1" class="form-label">New Password</label>
-      {{ form.new_password1 }}
-    </div>
 
-    <div class="mb-3">
-      <label for="id_new_password2" class="form-label">Confirm New Password</label>
-      {{ form.new_password2 }}
-    </div>
 
-    <button type="submit" class="btn btn-primary">Save Changes</button>
-    <a href="{% url 'home' %}" class="btn btn-secondary px-4">Cancel</a>  
-    
-  </form>
-</div>
 {% endblock %}
