--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -2,8 +2,9 @@
 {% load static %}
 
 {% block content %}
-
-<div class="card-header text-black">
+ <div class="card shadow-sm signup-card">
+    <div class="card-body">
+    <div class="card-header bg-primary text-white">
             <h5 class="mb-0">Update Profile</h5>
         </div>
 <hr>
@@ -31,6 +32,16 @@
   <button type="submit" class="btn btn-primary">Save Changes</button>
   <a href="{% url 'home' %}" class="btn btn-secondary px-4">Cancel</a>
 </form>
+
+  </div>
+</div>
+
+
+
+
+
+
+
 
 
 
