--- a/templates/chat/create_group.html
+++ b/templates/chat/create_group.html
@@ -1,8 +1,9 @@
 
 {% extends 'base/chat_base.html' %}
 {% block content %}
+
 <div class="container mt-5" style="max-width: 500px;">
-  <h3 class="text-center mb-4">Create Group Chat</h3>
+  <h3 class="text-center mb-4">Create A Group</h3>
 
   <form method="POST">
     {% csrf_token %}
@@ -16,8 +17,12 @@
       {{ form.participants }}
     </div>
 
-    <button type="submit" class="btn btn-primary w-100 mb-2">Create Group</button>
-    <a href="{% url 'home' %}" class="btn btn-secondary w-100">Cancel</a>
+    <div class="d-flex justify-content-between mt-4">
+                    <button type="submit" class="btn btn-primary px-4">Save</button>
+                    <a href="{% url 'home' %}" class="btn btn-secondary px-4">Cancel</a>
+                </div>
   </form>
 </div>
 {% endblock %}
+
+
