--- a/static/css/chat_base.css
+++ b/static/css/chat_base.css
@@ -7,3 +7,21 @@
     .message-sent { background: #0d6efd; color: white; }
     .message-recv { background: #e9ecef; color: #212529; }
     .chat-input-bar { border-top: 1px solid #e9ecef; padding: 10px; background: #fff; }
+
+    .status-dot {
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 6px;
+  background-color: gray;
+}
+.status-dot.online {
+  background-color: #00c851; /* green */
+}
+.status-dot.offline {
+  background-color: #888;
+}
+.username {
+  margin-right: 10px;
+}
