--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -29,7 +29,7 @@
     </div>
   {% endfor %}
 
-  <button type="submit" class="btn btn-primary">Save Changes</button>
+  <button type="submit" class="btn btn-primary">Save</button>
   <a href="{% url 'home' %}" class="btn btn-secondary px-4">Cancel</a>
 </form>
 
