--- a/templates/base/chat_base.html
+++ b/templates/base/chat_base.html
@@ -73,7 +73,7 @@
       <!-- USER LIST -->
 <div class="d-flex justify-content-between align-items-center mb-3">
   <h6 class="mb-0">My Chats</h6>
-  <button class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#inviteModal">+ Invite</button>
+  <button id="generatePrivateInvite" class="btn btn-sm btn-success">+ Invite</button>
 </div>
 
 <ul class="list-group">
@@ -169,6 +169,14 @@
   presenceSocket.onclose = function (e) {
     console.error('Presence socket closed unexpectedly');
   };
+
+  //For private chat invite
+  document.getElementById('generatePrivateInvite').addEventListener('click', async () => {
+  const response = await fetch("{% url 'ajax_generate_private_invite' %}");
+  const data = await response.json();
+  document.getElementById('privateInviteLink').innerHTML =
+    `<a href="${data.invite_link}">${data.invite_link}</a>`;
+});
 
   
 </script>
